# calculator-lex-yacc

./: .editorconfig  .gitignore  LICENSE  Makefile  Makefile.in  README.md  README.rst  autogen.sh  build.ninja  calculator  configure  configure.ac  linux-deps.sh  rules.ninja
.github/workflows/: build.yml
src/: Makefile  Makefile.am  Makefile.in  calculator.l  calculator.y
